# KaidoNav

./: README.md
3party/opening_hours/opening_hours_tests/: opening_hours_tests.cpp
android/: settings.gradle
android/app/: build.gradle
android/app/src/google/java/app/organicmaps/location/: LocationProviderFactory.java  (+1 more)
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/app/kaidonav/: DownloadResourcesLegacyActivity.cpp  Framework.cpp  Framework.hpp  LocationState.cpp  Map.cpp  MapManager.cpp  MwmApplication.cpp  TrackRecorder.cpp  TrafficState.cpp  UserMarkHelper.cpp  UserMarkHelper.hpp
android/app/src/main/cpp/app/kaidonav/bookmarks/data/: BookmarkManager.cpp
android/app/src/main/cpp/app/kaidonav/core/: jni_helper.cpp  logging.cpp
android/app/src/main/cpp/app/kaidonav/editor/: Editor.cpp  OpeningHours.cpp  OsmOAuth.cpp
android/app/src/main/cpp/app/kaidonav/isolines/: IsolinesManager.cpp
android/app/src/main/cpp/app/kaidonav/opengl/: androidoglcontextfactory.cpp  androidoglcontextfactory.hpp
android/app/src/main/cpp/app/kaidonav/platform/: AndroidPlatform.cpp  GuiThread.cpp  HttpThread.cpp  Language.cpp  Localization.cpp  PThreadImpl.cpp  SocketImpl.cpp
android/app/src/main/cpp/app/kaidonav/routing/: RoutingOptions.cpp
android/app/src/main/cpp/app/kaidonav/sdk/search/: DisplayedCategories.cpp  SearchEngine.cpp  SearchRecents.cpp
android/app/src/main/cpp/app/kaidonav/settings/: MapLanguageCode.cpp  UnitLocale.cpp
android/app/src/main/cpp/app/kaidonav/sound/: tts.cpp
android/app/src/main/cpp/app/kaidonav/subway/: SubwayManager.cpp
android/app/src/main/cpp/app/kaidonav/util/: Config.cpp  Distance.hpp  FeatureIdBuilder.hpp  GeoUtils.cpp  HttpClient.cpp  Language.cpp  LogsManager.cpp  NetworkPolicy.cpp  StringUtils.cpp  UiThread.cpp
android/app/src/main/cpp/app/kaidonav/vulkan/: android_vulkan_context_factory.cpp  android_vulkan_context_factory.hpp
android/app/src/main/java/app/kaidonav/: ChartController.java  DownloadResourcesLegacyActivity.java  Framework.java  Map.java  MapFragment.java  MapPlaceholderActivity.java  MapRenderingListener.java  MwmActivity.java  MwmApplication.java  PanelAnimator.java  SplashActivity.java  WebContainerDelegate.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_map.xml  downloader_status.xml  elevation_profile.xml  fragment_bookmark_list.xml  fragment_direction.xml  fragment_downloader.xml  fragment_prefs_faq.xml  fragment_search.xml  fragment_search_base.xml  fragment_suggest_country_download.xml  fragment_web_view_with_progress.xml  item_missed_map.xml  item_missed_map_group.xml  layout_nav_top.xml  map_buttons_layers.xml  onmap_downloader.xml  place_page_preview.xml  routing_plan.xml  routing_transit_step_view.xml
android/app/src/main/res/layout-land/: fragment_direction.xml  layout_nav_top.xml  onmap_downloader.xml
android/app/src/main/res/xml/: prefs_main.xml
drape/: gl_includes.hpp
editor/: server_api.cpp  xml_feature.cpp
editor/osm_auth_tests/: osm_auth_tests.cpp
kml/: types.hpp
map/: framework.cpp
map/map_tests/: mwm_url_tests.cpp
platform/: distance.hpp  platform_linux.cpp  platform_mac.mm  qt_location_service.cpp
routing/: cross_mwm_connector.hpp  routing_callbacks.hpp
routing/routing_integration_tests/: archival_reporter_tests.cpp  bicycle_route_test.cpp  street_names_test.cpp  transit_route_test.cpp
routing_common/routing_common_tests/: vehicle_model_test.cpp
search/: ranker.cpp
search/search_integration_tests/: processor_test.cpp
storage/storage_integration_tests/: test_defines.cpp
transit/: transit_schedule.hpp
(+359 files in other folders)
